# Genetic-Soliton-Search

./: Makefile.in  README  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  curve.c  curve.h  main.c  propagate.c  propagate.h
